introduced animal sniffer and took away java 8 deps